core/tests/rust/snapshots/integration_tests__rust__method_call_dependency_metrics.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/method_call_dependency.rs",
  "line_metrics": [
    {
      "line_number": 5,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.2857142857142857,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 13,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.5714285714285714,
      "depth": 1,
      "transitive_dependencies": 2,
      "dependent_lines": [
        12,
        6
      ]
    }
  ],
  "overall_complexity_score": 5.685714285714285
}
