core/tests/rust/snapshots/integration_tests__rust__path_qualified_call_dependency_ir.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/path_qualified_call_dependency.rs",
  "definitions": [
    {
      "name": "m",
      "line_number": 1,
      "definition_type": "ModuleDefinition",
      "scope": null
    },
    {
      "name": "f",
      "line_number": 1,
      "definition_type": "FunctionDefinition",
      "scope": "m.f"
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "f",
      "dependency_type": "FunctionCall",
      "context": "call_expression"
    },
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "m",
      "dependency_type": "VariableUse",
      "context": "scoped_identifier"
    }
  ],
  "usage": [
    {
      "name": "m",
      "kind": "Identifier",
      "scope": null,
      "start_line": 1,
      "start_column": 5,
      "end_line": 1,
      "end_column": 6
    },
    {
      "name": "f",
      "kind": "Identifier",
      "scope": "f",
      "start_line": 1,
      "start_column": 16,
      "end_line": 1,
      "end_column": 17
    },
    {
      "name": "m::f()",
      "kind": "CallExpression",
      "scope": null,
      "start_line": 2,
      "start_column": 1,
      "end_line": 2,
      "end_column": 7
    },
    {
      "name": "m",
      "kind": "Identifier",
      "scope": null,
      "start_line": 2,
      "start_column": 1,
      "end_line": 2,
      "end_column": 2
    },
    {
      "name": "f",
      "kind": "Identifier",
      "scope": null,
      "start_line": 2,
      "start_column": 4,
      "end_line": 2,
      "end_column": 5
    }
  ],
  "analysis_metadata": {
    "language": "Rust",
    "total_lines": 2,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
