core/tests/rust/snapshots/integration_tests__rust__path_qualified_call_dependency_metrics.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/rust/fixtures/path_qualified_call_dependency.rs",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 2,
      "dependency_distance_cost": 1.0,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1,
        1
      ]
    }
  ],
  "overall_complexity_score": 3.3000000000000003
}
