core/tests/rust/snapshots/integration_tests__rust__pattern_match_bindings_definitions.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "fixtures/pattern_match_bindings.rs",
  "original_file_path": "fixtures/pattern_match_bindings.rs",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0,
      "depth": 1,
      "transitive_dependencies": 0,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 3,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2,
        3
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 3,
      "transitive_dependencies": 2,
      "dependent_lines": [
        3
      ]
    },
    {
      "line_number": 7,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0,
      "depth": 1,
      "transitive_dependencies": 0,
      "dependent_lines": [
        7
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 1,
      "dependent_lines": [
        7,
        8
      ]
    },
    {
      "line_number": 9,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 3,
      "transitive_dependencies": 2,
      "dependent_lines": [
        8
      ]
    },
    {
      "line_number": 12,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0,
      "depth": 1,
      "transitive_dependencies": 0,
      "dependent_lines": [
        12
      ]
    },
    {
      "line_number": 13,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 1,
      "dependent_lines": [
        12,
        13
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 3,
      "transitive_dependencies": 2,
      "dependent_lines": [
        13
      ]
    },
    {
      "line_number": 15,
      "total_dependencies": 3,
      "dependency_distance_cost": 0.4117647058823529,
      "depth": 3,
      "transitive_dependencies": 2,
      "dependent_lines": [
        13,
        13,
        12
      ]
    }
  ],
  "overall_complexity_score": 38.2764705882353
}
