core/tests/rust/snapshots/integration_tests__rust__rust_closure_dependency.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "fixtures/closure_dependency.rs",
  "original_file_path": "fixtures/closure_dependency.rs",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.0,
      "depth": 1,
      "transitive_dependencies": 0,
      "dependent_lines": [
        2,
        2
      ]
    },
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.14285714285714285,
      "depth": 2,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 5,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0,
      "depth": 1,
      "transitive_dependencies": 0,
      "dependent_lines": [
        5
      ]
    },
    {
      "line_number": 6,
      "total_dependencies": 4,
      "dependency_distance_cost": 1.4285714285714284,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        5,
        2,
        5,
        2
      ]
    }
  ],
  "overall_complexity_score": 14.75714285714286
}
