core/tests/rust/snapshots/integration_tests__rust__rust_function_call_dependency.snap
---
source: core/tests/rust/mod.rs
assertion_line: 32
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "test.rs",
  "original_file_path": "test.rs",
  "line_metrics": [
    {
      "line_number": 1,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 2,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.3333333333333333,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1,
        1
      ]
    },
    {
      "line_number": 3,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 4,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 5,
      "total_dependencies": 2,
      "dependency_distance_cost": 1.3333333333333333,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1,
        1
      ]
    },
    {
      "line_number": 6,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    }
  ],
  "overall_complexity_score": 6.566666666666666
}
