core/tests/rust/snapshots/integration_tests__rust__rust_pattern_match_bindings.snap
---
source: core/tests/rust/mod.rs
assertion_line: 94
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "fixtures/pattern_match_bindings.rs",
  "original_file_path": "fixtures/pattern_match_bindings.rs",
  "line_metrics": [
    {
      "line_number": 1,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 2,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 5,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 6,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 7,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 8,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        7
      ]
    },
    {
      "line_number": 9,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        8
      ]
    },
    {
      "line_number": 10,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 11,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 12,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 13,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        12
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 15,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.17647058823529413,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        12
      ]
    },
    {
      "line_number": 16,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 17,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 18,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    }
  ],
  "definitions": {
    "main": 1,
    "option_value": 2,
    "num": 8,
    "iter": 12,
    "numbers": 7
  },
  "overall_complexity_score": 12.241176470588236
}
