core/tests/rust/snapshots/integration_tests__rust__rust_use_statements_dependency.snap
---
source: core/tests/rust/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "test.rs",
  "original_file_path": "test.rs",
  "line_metrics": [
    {
      "line_number": 1,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 2,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 3,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 4,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 5,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 6,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 7,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.29411764705882354,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.29411764705882354,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        3
      ]
    },
    {
      "line_number": 9,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 10,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 11,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 12,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 13,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.6470588235294118,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 2,
      "dependency_distance_cost": 1.2941176470588236,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        3,
        3
      ]
    },
    {
      "line_number": 15,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 16,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.8235294117647058,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 17,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    }
  ],
  "overall_complexity_score": 12.33529411764706
}
